--- a/scss.css
+++ b/scss.css
@@ -1,3 +1,9 @@
+#h1{
+	font-size: 100px;
+	font-style: italic;
+	font-weight: bold;
+	text-align: center;
+}
 body{
 	font-size: 16px;
 	color: red;
@@ -59,10 +65,12 @@ body{
 		padding: 10px;
 		text-align: center;
 		margin: 20px;
+		margin-top: 50px;
 	}}
 
 @media(max-width: 1200 px){
 	#background{
+		margin-top: 50px;
 		padding: 10px;
 		margin: 20px;
 		height: 700px;
@@ -72,6 +80,7 @@ body{
 
 @media(max-width: 767px){
 	#background{
+		margin-top: 50px;
 		padding: 10px;
 		margin: 20px;
 		height: 600px;
